# rustxmlproto

./: .gitignore  Cargo.toml  README.md  rundemo.sh
.github/workflows/: rust.yml
demo/: Cargo.toml  TestProto.xml  build.rs  rundemo.sh
demo/src/: main.rs
proto-derive/: Cargo.toml
proto-derive/src/: lib.rs
proto-macro/: Cargo.toml
proto-macro/src/: lib.rs
src/: formatter.rs  inheritwriter.rs  main.rs  objectwriter.rs  preface.rs  prototype.rs  value.rs
