[package]
name = "demo"
version = "0.1.0"
edition = "2021"
authors = [ "John Rexes Murro" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde-xml-rs = "0.5.1"
serde_derive = "1.0.130"
proto-macro = { path = "../proto-macro" }
